--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
+<app-categories></app-categories>
 <app-product-list></app-product-list>
 
 <router-outlet></router-outlet>
