Make CategoriesComponent and CategoryService function

--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -1,4 +1,6 @@
 <div class="categories">
   categories works!
-  {{categories.categories}}
+  <ul>
+    <li *ngFor="let category of categories">{{category}}</li>
+  </ul>
 </div>
