Add product-list service

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,5 +1,8 @@
 <div class="product-container">
   <div class="product-preview">
     Test
+    <ul>
+      <li *ngFor="let product of response">{{product.status}}</li>
+    </ul>
   </div>
 </div>
