--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -1,3 +1,3 @@
-<select>
+<select (change)="onCategoryChange($event.target.value)">
   <option *ngFor="let category of categories" value="{{category}}">{{category}}</option>
 </select>
