Make page-select component have per-page option

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
 
 <app-categories></app-categories>
 <app-product-list></app-product-list>
-
+<app-page-select></app-page-select>
 <router-outlet></router-outlet>
