Add previous and next buttons to page select component

--- a/src/app/page-select/page-select.component.html
+++ b/src/app/page-select/page-select.component.html
@@ -1,9 +1,13 @@
 <div class="page-select-container">
   <div class="page-choice">
     <ng-container *ngIf="pageInfo.pages">
-      <ng-container>
+      <ng-container *ngIf='page > 1'>
+        <button (click)='onPrevious()'>prev</button>
       </ng-container>
       <button *ngFor='let item of [].constructor(pageInfo.pages); let pg = index' value='{{pg+1}}' (click)='onPageClick($event.target.value)'>{{pg+1}}</button>
+      <ng-container *ngIf='page < pageInfo.pages'>
+          <button (click)='onNext()'>next</button>
+      </ng-container>
     </ng-container>
   </div>
   <div class="n-items">
