Add cart button and window

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-categories></app-categories>
+<app-cart-icon></app-cart-icon>
 <app-product-list></app-product-list>
 <app-page-select></app-page-select>
 <router-outlet></router-outlet>
