Make it possible to add items to cart

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -5,6 +5,7 @@
       {{product.name}}<br>
       {{product.description}}<br>
       {{product.quantity}} in stock. ${{product.price}}
+      <button (click)='addItem(product)'>+</button>
     </div>
   </div>
 </div>
