--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,3 +1,10 @@
 <div class='cart'>
+  <table>
+    <tr *ngFor='let item of items'>
+      <td>{{item.name}}</td>
+      <td>{{item.quantity}}</td>
+      <td>{{item.price}}</td>
+    </tr>
+  </table>
   <button (click)='onHideClick()'>Hide Cart</button>
 </div>
