--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,22 +1,36 @@
 <div class='cart'>
-  <table>
-    <tr *ngFor='let item of items'>
-      <td>{{item.name}}</td>
-      <td>{{item.quantity}}@{{item.price}}</td>
-    </tr>
-    <tr></tr>
-    <tr>
-      <td>Subtotal:</td>
-      <td>{{subTotal}}</td>
-    </tr>
-    <tr>
-      <td>Taxes:</td>
-      <td>{{taxes}}</td>
-    </tr>
-    <tr>
-      <td>Total:</td>
-      <td>{{total}}</td>
-    </tr>
-  </table>
-  <button (click)='onHideClick()'>Hide Cart</button>
+  <ng-container *ngIf='state == State.Preview'>
+    <table>
+      <tr *ngFor='let item of items'>
+        <td>{{item.name}}</td>
+        <td>{{item.quantity}}@{{item.price}}</td>
+      </tr>
+      <tr></tr>
+      <tr>
+        <td>Subtotal:</td>
+        <td>{{subTotal}}</td>
+      </tr>
+      <tr>
+        <td>Taxes:</td>
+        <td>{{taxes}}</td>
+      </tr>
+      <tr>
+        <td>Total:</td>
+        <td>{{total}}</td>
+      </tr>
+    </table>
+    <button (click)='onHideClick()'>Close Cart</button>
+    <button (click)='onOpenCheckout()'>Proceed to Checkout</button>
+  </ng-container>
+  <ng-container *ngIf='state == State.Checkout'>
+    <form>
+      Name:<br>
+      <input type='text' name='name' /><br>
+      Email:<br>
+      <input type='text' name='email' /><br>
+      <input type='checkbox' name='confirmReceived'>Send me a confirmation email with my fictitious order details.<br>
+      <input type='checkbox' name='confirmShipped'>Send me a notification email when my fictitious order ships.<br>
+      <input type='submit' value='Submit' />
+    </form>
+  </ng-container>
 </div>
