Fix template errors on page load

--- a/src/app/page-select/page-select.component.html
+++ b/src/app/page-select/page-select.component.html
@@ -1,6 +1,6 @@
 <div class="page-select-container">
   <div class="page-choice">
-    <ng-container *ngIf="pageInfo.pages">
+    <ng-container *ngIf="pageInfo">
       <ng-container *ngIf='page'>
         <ng-container *ngIf='page > 1'>
           <button (click)='onPrevious()'>prev</button>
