--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,11 +1,13 @@
 <div class="product-container">
-  <div class="product-preview" *ngFor="let product of response.products">
-    <app-product-image [imgSrc]=product.image_url></app-product-image>
-    <div>
-      {{product.name}}<br>
-      {{product.description}}<br>
-      {{product.quantity}} in stock. ${{product.price}}
-      <button (click)='addItem(product)'>+</button>
+  <ng-container *ngIf='response'>
+    <div class="product-preview" *ngFor="let product of response.products">
+      <app-product-image [imgSrc]=product.image_url></app-product-image>
+      <div>
+        {{product.name}}<br>
+        {{product.description}}<br>
+        {{product.quantity}} in stock. ${{product.price}}
+        <button (click)='addItem(product)'>+</button>
+      </div>
     </div>
-  </div>
+  </ng-container>
 </div>
