Add preview unavailable alt

--- a/src/app/product-image/product-image.component.html
+++ b/src/app/product-image/product-image.component.html
@@ -1,1 +1,1 @@
-<img class="product-image" src="{{imgSrc}}/100x100" />
+<img class="product-image" src="{{imgSrc}}/100x100" alt="Preview Unavailable" />
